# openenclave

host/: CMakeLists.txt
include/openenclave/internal/: sgxtypes.h
scripts/: install-windows-prereqs.ps1
scripts/ansible/: oe-windows-acc-setup.yml
tests/: CMakeLists.txt
tests/host_verify/: CMakeLists.txt
tests/host_verify/host/: CMakeLists.txt  host.cpp
tests/report/host/: host.cpp
tests/tools/oecert/host/: host.cpp
